// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatSocials clicks on link 1`] = `
<body>
  <div>
    <div
      class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
    >
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
  </div>
</body>
`;

exports[`FloatSocials renders the float socials 1`] = `
<div>
  <div
    class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
  >
    <a
      class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
      href="https://github.com/yonycalsin"
      rel="noreferrer"
      target="_blank"
    >
      Github
    </a>
    <a
      class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
      href="https://www.linkedin.com/in/yonycalsin"
      rel="noreferrer"
      target="_blank"
    >
      Linkedin
    </a>
    <a
      class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
      href="https://twitter.com/yonycalsin"
      rel="noreferrer"
      target="_blank"
    >
      Twitter
    </a>
    <a
      class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
      href="mailto:helloyonycalsin@gmail.com"
      rel="noreferrer"
      target="_blank"
    >
      Email
    </a>
  </div>
</div>
`;
